// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeAnyMembers fails when given array contains array value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toIncludeAnyMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to not include any of the following members:
  <green>[[{"hello": "world"}], 7]</color>
Received:
  <red>[[{"hello": "world"}]]</color>"
`;

exports[`.not.toIncludeAnyMembers fails when given array contains object value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toIncludeAnyMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to not include any of the following members:
  <green>[{"foo": "bar"}]</color>
Received:
  <red>[{"foo": "bar"}]</color>"
`;

exports[`.not.toIncludeAnyMembers fails when given object contains primitive value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toIncludeAnyMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to not include any of the following members:
  <green>[7, 8]</color>
Received:
  <red>[7]</color>"
`;

exports[`.toIncludeAnyMembers fails when expected object does not contain array value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAnyMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to include any of the following members:
  <green>"world"</color>
Received:
  <red>[1, 2, 3]</color>"
`;

exports[`.toIncludeAnyMembers fails when given array does not contain any members  1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAnyMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to include any of the following members:
  <green>[1, 2, 3]</color>
Received:
  <red>[4, 5, 6]</color>"
`;

exports[`.toIncludeAnyMembers fails when given object is not an array 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAnyMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to include any of the following members:
  <green>[1, 2, 3]</color>
Received:
  <red>7</color>"
`;
